# qt6-gui-cmake

./: .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cpp  scenemodifier.cpp  scenemodifier.hpp
