cmake_minimum_required(VERSION 3.29)
project(hello_world_qt_cmake VERSION 1.0.0 LANGUAGES CXX)
set(CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(APPLE) 
    list(APPEND CMAKE_PREFIX_PATH "/usr/local/Cellar/qt/6.7.0_1/lib/cmake/Qt6")
endif()
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets 3DCore 3DExtras 3DRender 3DInput)
qt_standard_project_setup()
add_subdirectory(src/app)